--- a/public/index.html
+++ b/public/index.html
@@ -552,9 +552,357 @@
 				<section class="sPriceList section" id="sPriceList">
 					<div class="container">
 						<div class="section-title text-center">
-							<h2>sPriceList</h2>
+							<h2>Прайс-лист на&nbsp;различные <br> категории навесов</h2>
 						</div>
-						<div class="row"></div>
+						<div class="sPriceList__row-main row">
+							<div class="col-lg-7 col-xxl-8">
+								<div class="dd-group dd-group-js">
+									<div class="accordion-item">
+										<div class="accordion-item__head dd-head-js">
+											<h4>Навесы для авто</h4>
+											<svg class="icon icon-chevron-right ">
+												<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+											</svg>
+										</div>
+										<div class="accordion-item__content dd-content-js">
+											<table class="with-transfers">
+												<tr>
+													<td class="text-black">Для 1 авто <span>3,5×6,3 м</span></td>
+													<td>103 635 ₽</td>
+												</tr>
+												<tr>
+													<td class="text-black">Для 1 авто <span>4×6,3 м</span></td>
+													<td>118 440 ₽</td>
+												</tr>
+												<tr>
+													<td class="text-black">Для 1 авто <span>4,5×6,3 м</span></td>
+													<td>133 245 ₽</td>
+												</tr>
+												<tr>
+													<td class="text-black">Для 1 авто <span>5,5×6,3 м</span></td>
+													<td>162 855 ₽</td>
+												</tr>
+												<tr>
+													<td class="text-black">Для 2 авто <span>5,5×6,3 м</span></td>
+													<td>162 855 ₽</td>
+												</tr>
+												<tr>
+													<td class="text-black">Для 2 авто <span>3,5×8,2 м</span></td>
+													<td>134 890 ₽</td>
+												</tr>
+												<tr>
+													<td class="text-black">Для 2 авто <span>3,5×10,5 м</span></td>
+													<td>172 725 ₽</td>
+												</tr>
+												<tr>
+													<td class="text-black">Для 2 авто <span>6×6,3 м</span></td>
+													<td>177 660 ₽</td>
+												</tr>
+												<tr>
+													<td class="text-black">Для 2 авто <span>6,5×6,3 м</span></td>
+													<td>192 465 ₽</td>
+												</tr>
+												<tr>
+													<td class="text-black">Для 2 авто <span>4×10,5 м</span></td>
+													<td>197 400 ₽</td>
+												</tr>
+												<tr>
+													<td class="text-black">Для 2 авто <span>7×6,3 м</span></td>
+													<td>207 270 ₽</td>
+												</tr>
+												<tr>
+													<td class="text-black">Для 2 авто <span>4,5×10,5 м</span></td>
+													<td>222 075 ₽</td>
+												</tr>
+											</table>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-5 col-xxl-4">
+								<div class="dd-group dd-group-js">
+									<div class="accordion-item">
+										<div class="accordion-item__head dd-head-js">
+											<h4>Навес под ключ</h4>
+											<svg class="icon icon-chevron-right ">
+												<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+											</svg>
+										</div>
+										<div class="accordion-item__content dd-content-js">
+											<table class="with-transfers">
+												<tr>
+													<td>Из&nbsp;сотового поликарбоната</td>
+													<td>от&nbsp;4&nbsp;500&nbsp;₽/м2</td>
+												</tr>
+												<tr>
+													<td>Из&nbsp;монолитного поликарбоната</td>
+													<td>от&nbsp;7&nbsp;000&nbsp;₽/м2</td>
+												</tr>
+												<tr>
+													<td>Из&nbsp;профнастила</td>
+													<td>от&nbsp;4&nbsp;800&nbsp;₽/м2</td>
+												</tr>
+												<tr>
+													<td>Из&nbsp;металлочерепицы</td>
+													<td>от&nbsp;4&nbsp;800&nbsp;₽/м2</td>
+												</tr>
+												<tr>
+													<td>Из&nbsp;мягкой кровли</td>
+													<td>от&nbsp;7&nbsp;000&nbsp;₽/м2</td>
+												</tr>
+												<tr>
+													<td>Из&nbsp;ондулина</td>
+													<td>от&nbsp;4&nbsp;800&nbsp;₽/м2</td>
+												</tr>
+											</table>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-7 col-xxl-8">
+								<div class="dd-group dd-group-js">
+									<div class="accordion-item">
+										<div class="accordion-item__head dd-head-js">
+											<h4>Типовые арочные фермы</h4>
+											<svg class="icon icon-chevron-right ">
+												<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+											</svg>
+										</div>
+										<div class="accordion-item__content dd-content-js">
+											<div class="accordion-item__row row">
+												<div class="accordion-item__col col-md-6">
+													<table>
+														<tr>
+															<td>Длина&nbsp;3&nbsp;м</td>
+															<td>2&nbsp;500&nbsp;₽/ферма</td>
+														</tr>
+														<tr>
+															<td>Длина&nbsp;3,5&nbsp;м</td>
+															<td>3&nbsp;500&nbsp;₽/ферма</td>
+														</tr>
+														<tr>
+															<td>Длина&nbsp;3,7&nbsp;м</td>
+															<td>3&nbsp;500&nbsp;₽/ферма</td>
+														</tr>
+														<tr>
+															<td>Длина&nbsp;4&nbsp;м</td>
+															<td>4&nbsp;000&nbsp;₽/ферма</td>
+														</tr>
+														<tr>
+															<td>Длина&nbsp;4,4&nbsp;м</td>
+															<td>4&nbsp;500&nbsp;₽/ферма</td>
+														</tr>
+														<tr>
+															<td>Длина&nbsp;5&nbsp;м</td>
+															<td>5&nbsp;000&nbsp;₽/ферма</td>
+														</tr>
+													</table>
+												</div>
+												<div class="accordion-item__col col-md-6">
+													<table>
+														<tr>
+															<td>Длина&nbsp;3&nbsp;м</td>
+															<td>2&nbsp;500&nbsp;₽/ферма</td>
+														</tr>
+														<tr>
+															<td>Длина&nbsp;3,5&nbsp;м</td>
+															<td>3&nbsp;500&nbsp;₽/ферма</td>
+														</tr>
+														<tr>
+															<td>Длина&nbsp;3,7&nbsp;м</td>
+															<td>3&nbsp;500&nbsp;₽/ферма</td>
+														</tr>
+														<tr>
+															<td>Длина&nbsp;4&nbsp;м</td>
+															<td>4&nbsp;000&nbsp;₽/ферма</td>
+														</tr>
+														<tr>
+															<td>Длина&nbsp;4,4&nbsp;м</td>
+															<td>4&nbsp;500&nbsp;₽/ферма</td>
+														</tr>
+														<tr>
+															<td>Длина&nbsp;5&nbsp;м</td>
+															<td>5&nbsp;000&nbsp;₽/ферма</td>
+														</tr>
+													</table>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-5 col-xxl-4">
+								<div class="dd-group dd-group-js">
+									<div class="accordion-item">
+										<div class="accordion-item__head dd-head-js">
+											<h4>Ферма для гаражей  <span>(крыша&nbsp;и&nbsp;столбы)<span/></h4>
+											<svg class="icon icon-chevron-right ">
+												<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+											</svg>
+										</div>
+										<div class="accordion-item__content dd-content-js">
+											<table>
+												<tr>
+													<td>4&nbsp;м</td>
+													<td>15&nbsp;000&nbsp;₽/ферма</td>
+												</tr>
+												<tr>
+													<td>4&nbsp;м</td>
+													<td>15&nbsp;000&nbsp;₽/ферма</td>
+												</tr>
+												<tr>
+													<td>4&nbsp;м</td>
+													<td>15&nbsp;000&nbsp;₽/ферма</td>
+												</tr>
+												<tr>
+													<td>4&nbsp;м</td>
+													<td>15&nbsp;000&nbsp;₽/ферма</td>
+												</tr>
+											</table>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<h3>Дополнительные комплектующие</h3>
+						<div class="sPriceList__row-main row">
+							<div class="col-lg-6">
+								<div class="dd-group dd-group-js">
+									<div class="accordion-item">
+										<div class="accordion-item__head dd-head-js">
+											<h4>Навесы для авто</h4>
+											<svg class="icon icon-chevron-right ">
+												<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+											</svg>
+										</div>
+										<div class="accordion-item__content dd-content-js">
+											<table class="with-transfers">
+												<tr>
+													<td>Изготовление металлокаркаса навеса</td>
+													<td>4000&ndash;4500&nbsp;₽/м2</td>
+												</tr>
+												<tr>
+													<td>Покраска Hammerite (Хамерайт)</td>
+													<td>180&nbsp;₽/м2</td>
+												</tr>
+												<tr>
+													<td>Нестандартная высота 3&nbsp;метра</td>
+													<td>плюс 120&ndash;240&nbsp;₽/м2</td>
+												</tr>
+												<tr>
+													<td>Нестандартная высота 4&nbsp;метра</td>
+													<td>плюс 600&nbsp;₽/м2</td>
+												</tr>
+												<tr>
+													<td>Бетонирование столбов на&nbsp;1200&nbsp;мм</td>
+													<td>1&nbsp;800&nbsp;₽/столб</td>
+												</tr>
+												<tr>
+													<td>Сваи 76&nbsp;мм &bull; Глубина вкручивания 2&nbsp;м</td>
+													<td>3&nbsp;600&nbsp;₽/свая</td>
+												</tr>
+												<tr>
+													<td>Бутование щебнем</td>
+													<td>плюс 600&nbsp;₽/столб</td>
+												</tr>
+												<tr>
+													<td>Бутование вашим щебнем</td>
+													<td>бесплатно</td>
+												</tr>
+												<tr>
+													<td>Монтаж анкерами к&nbsp;бетону</td>
+													<td>бесплатно</td>
+												</tr>
+											</table>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-6">
+								<div class="sPriceList__row-main row">
+									<div class="col-12">
+										<div class="dd-group dd-group-js">
+											<div class="accordion-item">
+												<div class="accordion-item__head dd-head-js">
+													<h4>Откатные ворота</h4>
+													<svg class="icon icon-chevron-right ">
+														<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+													</svg>
+												</div>
+												<div class="accordion-item__content dd-content-js">
+													<table class="with-transfers">
+														<tr>
+															<td>Ширина 4&nbsp;м &bull; Автоматика Nice RD400</td>
+															<td>94&nbsp;800&nbsp;₽</td>
+														</tr>
+														<tr>
+															<td>Ширина 4&nbsp;м &bull; Без автоматики</td>
+															<td>72&nbsp;000&nbsp;₽</td>
+														</tr>
+													</table>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="col-12">
+										<div class="dd-group dd-group-js">
+											<div class="accordion-item">
+												<div class="accordion-item__head dd-head-js">
+													<h4>Секционные ворота</h4>
+													<svg class="icon icon-chevron-right ">
+														<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+													</svg>
+												</div>
+												<div class="accordion-item__content dd-content-js">
+													<table>
+														<tr>
+															<td>С&nbsp;приводом</td>
+															<td>114&nbsp;000&nbsp;₽</td>
+														</tr>
+														<tr>
+															<td>Без привода</td>
+															<td>90&nbsp;000&nbsp;₽</td>
+														</tr>
+													</table>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="col-12">
+										<div class="dd-group dd-group-js">
+											<div class="accordion-item">
+												<div class="accordion-item__head dd-head-js">
+													<h4>Заборы</h4>
+													<svg class="icon icon-chevron-right ">
+														<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+													</svg>
+												</div>
+												<div class="accordion-item__content dd-content-js">
+													<table class="with-transfers">
+														<tr>
+															<td>Под ключ со&nbsp;столбами &bull; Высота&nbsp;1,8&nbsp;м &bull; Профлист &laquo;Маталл&nbsp;Профиль&raquo;</td>
+															<td>1680&nbsp;₽/мп</td>
+														</tr>
+														<tr>
+															<td>Под ключ на&nbsp;ваши столбы &bull; Высота&nbsp;1,8&nbsp;м &bull; Профлист &laquo;Маталл&nbsp;Профиль&raquo;</td>
+															<td>1500&nbsp;₽/мп</td>
+														</tr>
+														<tr>
+															<td>Демонтаж сетки-рабицы</td>
+															<td>120&nbsp;₽/мп</td>
+														</tr>
+														<tr>
+															<td>Бутование песчаного-гравийной смесью</td>
+															<td>540&nbsp;₽/столб</td>
+														</tr>
+													</table>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</section>
 				<!-- end sPriceList-->
