--- a/public/index.html
+++ b/public/index.html
@@ -542,9 +542,52 @@
 					<div class="container">
 						<div class="section-title text-center">
 							<h4>Цены</h4>
-							<h2>Типовые арочные навесы из&nbsp;поликарбоната</h2>
+							<h2>Типовые арочные&nbsp;навесы из&nbsp;поликарбоната</h2>
 						</div>
-						<div class="row"></div>
+						<div class="sTypical__filter row">
+							<div class="col-12 col-lg-auto">
+								<p>Выберите длину</p>
+							</div>
+							<div class="col">
+								<div class="row">
+											<div class="sTypical__btn-col col">
+												<input class="btn-check" type="checkbox" id="option1" autocomplete="off"/>
+												<label class="btn" for="option1"><span>4м</span><span>4 метра</span>
+												</label>
+											</div>
+											<div class="sTypical__btn-col col">
+												<input class="btn-check" type="checkbox" id="option2" autocomplete="off"/>
+												<label class="btn" for="option2"><span>5м</span><span>5 метров</span>
+												</label>
+											</div>
+											<div class="sTypical__btn-col col">
+												<input class="btn-check" type="checkbox" id="option3" autocomplete="off"/>
+												<label class="btn" for="option3"><span>6м</span><span>6 метров</span>
+												</label>
+											</div>
+											<div class="sTypical__btn-col col">
+												<input class="btn-check" type="checkbox" id="option4" autocomplete="off"/>
+												<label class="btn" for="option4"><span>7м</span><span>7 метров</span>
+												</label>
+											</div>
+											<div class="sTypical__btn-col col">
+												<input class="btn-check" type="checkbox" id="option5" autocomplete="off"/>
+												<label class="btn" for="option5"><span>8м</span><span>8 метров</span>
+												</label>
+											</div>
+											<div class="sTypical__btn-col col">
+												<input class="btn-check" type="checkbox" id="option6" autocomplete="off"/>
+												<label class="btn" for="option6"><span>9м</span><span>9 метров</span>
+												</label>
+											</div>
+											<div class="sTypical__btn-col col">
+												<input class="btn-check" type="checkbox" id="option7" autocomplete="off"/>
+												<label class="btn" for="option7"><span>10м</span><span>10 метров</span>
+												</label>
+											</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</section>
 				<!-- end sTypical-->
