--- a/public/index.html
+++ b/public/index.html
@@ -588,6 +588,203 @@
 								</div>
 							</div>
 						</div>
+						<div class="sTypical__slider-wrapper">
+							<div class="swiper-button-hand swiper-button-hand-prev swiper-button-prev">
+								<svg class="icon icon-arrow-left ">
+									<use xlink:href="img/svg/sprite.svg#arrow-left"></use>
+								</svg>
+							</div>
+							<div class="swiper-button-hand swiper-button-hand-next swiper-button-next">
+								<svg class="icon icon-arrow-right ">
+									<use xlink:href="img/svg/sprite.svg#arrow-right"></use>
+								</svg>
+							</div>
+							<div class="sTypical__slider sTypical__slider--js swiper">
+								<div class="swiper-wrapper">
+										<div class="sTypical__slide swiper-slide">
+											<div class="sTypical__item">
+												<!-- picture-->
+												<picture> 
+													<source type="image/avif" srcset="img/@2x/avif/sTypical-1.avif"/>
+													<source type="image/webp" srcset="img/@2x/webp/sTypical-1.webp"/><img class="object-fit-js" src="img/@2x/sTypical-1.png" alt="" loading="lazy"/>
+												</picture>
+												<!-- /picture-->
+												<table>
+													<tr>
+														<th>Н-1830</th>
+														<th>100&nbsp;800&nbsp;₽</th>
+													</tr>
+													<tr>
+														<td>Ш&times;Д&times;В</td>
+														<td>3&times;8&times;2,5&nbsp;м</td>
+													</tr>
+													<tr>
+														<td>Тип навеса</td>
+														<td>Арочный</td>
+													</tr>
+													<tr>
+														<td>Кровля</td>
+														<td>Сот. поликарбонат</td>
+													</tr>
+												</table>
+												<a class="sTypical__btn" href="#">Хочу такой навес
+												</a>
+											</div>
+										</div>
+										<div class="sTypical__slide swiper-slide">
+											<div class="sTypical__item">
+												<!-- picture-->
+												<picture> 
+													<source type="image/avif" srcset="img/@2x/avif/sTypical-1.avif"/>
+													<source type="image/webp" srcset="img/@2x/webp/sTypical-1.webp"/><img class="object-fit-js" src="img/@2x/sTypical-1.png" alt="" loading="lazy"/>
+												</picture>
+												<!-- /picture-->
+												<table>
+													<tr>
+														<th>Н-1830</th>
+														<th>100&nbsp;800&nbsp;₽</th>
+													</tr>
+													<tr>
+														<td>Ш&times;Д&times;В</td>
+														<td>3&times;8&times;2,5&nbsp;м</td>
+													</tr>
+													<tr>
+														<td>Тип навеса</td>
+														<td>Арочный</td>
+													</tr>
+													<tr>
+														<td>Кровля</td>
+														<td>Сот. поликарбонат</td>
+													</tr>
+												</table>
+												<a class="sTypical__btn" href="#">Хочу такой навес
+												</a>
+											</div>
+										</div>
+										<div class="sTypical__slide swiper-slide">
+											<div class="sTypical__item">
+												<!-- picture-->
+												<picture> 
+													<source type="image/avif" srcset="img/@2x/avif/sTypical-1.avif"/>
+													<source type="image/webp" srcset="img/@2x/webp/sTypical-1.webp"/><img class="object-fit-js" src="img/@2x/sTypical-1.png" alt="" loading="lazy"/>
+												</picture>
+												<!-- /picture-->
+												<table>
+													<tr>
+														<th>Н-1830</th>
+														<th>100&nbsp;800&nbsp;₽</th>
+													</tr>
+													<tr>
+														<td>Ш&times;Д&times;В</td>
+														<td>3&times;8&times;2,5&nbsp;м</td>
+													</tr>
+													<tr>
+														<td>Тип навеса</td>
+														<td>Арочный</td>
+													</tr>
+													<tr>
+														<td>Кровля</td>
+														<td>Сот. поликарбонат</td>
+													</tr>
+												</table>
+												<a class="sTypical__btn" href="#">Хочу такой навес
+												</a>
+											</div>
+										</div>
+										<div class="sTypical__slide swiper-slide">
+											<div class="sTypical__item">
+												<!-- picture-->
+												<picture> 
+													<source type="image/avif" srcset="img/@2x/avif/sTypical-1.avif"/>
+													<source type="image/webp" srcset="img/@2x/webp/sTypical-1.webp"/><img class="object-fit-js" src="img/@2x/sTypical-1.png" alt="" loading="lazy"/>
+												</picture>
+												<!-- /picture-->
+												<table>
+													<tr>
+														<th>Н-1830</th>
+														<th>100&nbsp;800&nbsp;₽</th>
+													</tr>
+													<tr>
+														<td>Ш&times;Д&times;В</td>
+														<td>3&times;8&times;2,5&nbsp;м</td>
+													</tr>
+													<tr>
+														<td>Тип навеса</td>
+														<td>Арочный</td>
+													</tr>
+													<tr>
+														<td>Кровля</td>
+														<td>Сот. поликарбонат</td>
+													</tr>
+												</table>
+												<a class="sTypical__btn" href="#">Хочу такой навес
+												</a>
+											</div>
+										</div>
+										<div class="sTypical__slide swiper-slide">
+											<div class="sTypical__item">
+												<!-- picture-->
+												<picture> 
+													<source type="image/avif" srcset="img/@2x/avif/sTypical-1.avif"/>
+													<source type="image/webp" srcset="img/@2x/webp/sTypical-1.webp"/><img class="object-fit-js" src="img/@2x/sTypical-1.png" alt="" loading="lazy"/>
+												</picture>
+												<!-- /picture-->
+												<table>
+													<tr>
+														<th>Н-1830</th>
+														<th>100&nbsp;800&nbsp;₽</th>
+													</tr>
+													<tr>
+														<td>Ш&times;Д&times;В</td>
+														<td>3&times;8&times;2,5&nbsp;м</td>
+													</tr>
+													<tr>
+														<td>Тип навеса</td>
+														<td>Арочный</td>
+													</tr>
+													<tr>
+														<td>Кровля</td>
+														<td>Сот. поликарбонат</td>
+													</tr>
+												</table>
+												<a class="sTypical__btn" href="#">Хочу такой навес
+												</a>
+											</div>
+										</div>
+										<div class="sTypical__slide swiper-slide">
+											<div class="sTypical__item">
+												<!-- picture-->
+												<picture> 
+													<source type="image/avif" srcset="img/@2x/avif/sTypical-1.avif"/>
+													<source type="image/webp" srcset="img/@2x/webp/sTypical-1.webp"/><img class="object-fit-js" src="img/@2x/sTypical-1.png" alt="" loading="lazy"/>
+												</picture>
+												<!-- /picture-->
+												<table>
+													<tr>
+														<th>Н-1830</th>
+														<th>100&nbsp;800&nbsp;₽</th>
+													</tr>
+													<tr>
+														<td>Ш&times;Д&times;В</td>
+														<td>3&times;8&times;2,5&nbsp;м</td>
+													</tr>
+													<tr>
+														<td>Тип навеса</td>
+														<td>Арочный</td>
+													</tr>
+													<tr>
+														<td>Кровля</td>
+														<td>Сот. поликарбонат</td>
+													</tr>
+												</table>
+												<a class="sTypical__btn" href="#">Хочу такой навес
+												</a>
+											</div>
+										</div>
+								</div>
+								<div class="swiper-pagination"></div>
+							</div>
+						</div>
 					</div>
 				</section>
 				<!-- end sTypical-->
@@ -970,7 +1167,7 @@
 						</div>
 						<div class="sReviews__slider sReviews__slider--js swiper">
 							<div class="swiper-wrapper">
-								<div class="sReviews__slide swiper-slide">
+									<div class="sReviews__slide swiper-slide">
 										<div class="reviewItem">
 											<div class="reviewItem__body"><img src="img/svg/reviewItem-bg.svg" alt=""/>
 												<div class="reviewItem__subtitle">Цитата из&nbsp;отзыва
@@ -1000,8 +1197,8 @@
 												</div>
 											</div>
 										</div>
-								</div>
-								<div class="sReviews__slide swiper-slide">
+									</div>
+									<div class="sReviews__slide swiper-slide">
 										<div class="reviewItem">
 											<div class="reviewItem__body"><img src="img/svg/reviewItem-bg.svg" alt=""/>
 												<div class="reviewItem__subtitle">Цитата из&nbsp;отзыва
@@ -1031,8 +1228,8 @@
 												</div>
 											</div>
 										</div>
-								</div>
-								<div class="sReviews__slide swiper-slide">
+									</div>
+									<div class="sReviews__slide swiper-slide">
 										<div class="reviewItem">
 											<div class="reviewItem__body"><img src="img/svg/reviewItem-bg.svg" alt=""/>
 												<div class="reviewItem__subtitle">Цитата из&nbsp;отзыва
@@ -1068,8 +1265,8 @@
 												</div>
 											</div>
 										</div>
-								</div>
-								<div class="sReviews__slide swiper-slide">
+									</div>
+									<div class="sReviews__slide swiper-slide">
 										<div class="reviewItem">
 											<div class="reviewItem__body"><img src="img/svg/reviewItem-bg.svg" alt=""/>
 												<div class="reviewItem__subtitle">Цитата из&nbsp;отзыва
@@ -1099,8 +1296,8 @@
 												</div>
 											</div>
 										</div>
-								</div>
-								<div class="sReviews__slide swiper-slide">
+									</div>
+									<div class="sReviews__slide swiper-slide">
 										<div class="reviewItem">
 											<div class="reviewItem__body"><img src="img/svg/reviewItem-bg.svg" alt=""/>
 												<div class="reviewItem__subtitle">Цитата из&nbsp;отзыва
@@ -1130,8 +1327,8 @@
 												</div>
 											</div>
 										</div>
-								</div>
-								<div class="sReviews__slide swiper-slide">
+									</div>
+									<div class="sReviews__slide swiper-slide">
 										<div class="reviewItem">
 											<div class="reviewItem__body"><img src="img/svg/reviewItem-bg.svg" alt=""/>
 												<div class="reviewItem__subtitle">Цитата из&nbsp;отзыва
@@ -1167,7 +1364,7 @@
 												</div>
 											</div>
 										</div>
-								</div>
+									</div>
 							</div>
 						</div>
 					</div>
