--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,31 @@
 				</div>
 			</div>
 			<!-- end top-nav-->
+			<!-- start topLine-->
+			<div class="topLine section" id="topLine">
+				<div class="container">
+					<div class="topLine__main-row row">
+						<div class="col-auto">
+							<a class="topLine__logo" href="/"><img src="img/svg/logo-top.svg" alt=""/>
+							</a>
+						</div>
+						<div class="col">
+							<div class="row">
+								<div class="col"><span>dropdown</span></div>
+								<div class="col-auto">
+									<div class="topLine__schedule"><span>открыто</span><span>Пн&ndash;Вс &bull; 9:00&ndash;21:00</span>
+									</div>
+								</div>
+								<div class="col-auto">
+									<div class="topLine__label"> <span>Работаем с&nbsp;2012 года</span>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- end topLine-->
 			<!-- start headerBlock-->
 			<div class="headerBlock section bg-wrap" id="headerBlock">
 				<!-- picture-->
