--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,10 @@
 				<div class="container">
 					<div class="topLine__main-row row">
 						<div class="col-auto">
-							<a class="topLine__logo" href="/"><img src="img/svg/logo-top.svg" alt=""/>
+							<a class="topLine__logo" href="/">
+								<svg class="icon icon-logo-top ">
+									<use xlink:href="img/svg/sprite.svg#logo-top"></use>
+								</svg>
 							</a>
 						</div>
 						<div class="col">
