--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,26 @@
 						</div>
 						<div class="col">
 							<div class="row">
-								<div class="col"><span>dropdown</span></div>
+								<div class="topLine__col col-auto">
+									<div class="locaton-dropdown dropdown">
+										<div class="locaton-dropdown__btn dropdown__btn">
+											<svg class="icon icon-geo-tag ">
+												<use xlink:href="img/svg/sprite.svg#geo-tag"></use>
+											</svg><span>Москва и&nbsp;МО</span>
+											<svg class="icon icon-chevron-down ">
+												<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
+											</svg>
+										</div>
+										<div class="locaton-dropdown__content dropdown__content">
+											<a class="locaton-dropdown__item" href="#">Москва и&nbsp;МО
+											</a>
+											<a class="locaton-dropdown__item" href="#">Санкт-Петербург и&nbsp;область
+											</a>
+											<a class="locaton-dropdown__item" href="#">И так далее
+											</a>
+										</div>
+									</div>
+								</div>
 								<div class="col-auto">
 									<div class="topLine__schedule"><span>открыто</span><span>Пн&ndash;Вс &bull; 9:00&ndash;21:00</span>
 									</div>
