--- a/public/index.html
+++ b/public/index.html
@@ -78,11 +78,11 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-auto">
+								<div class="col-sm-auto">
 									<div class="topLine__schedule"><span>открыто</span><span>Пн&ndash;Вс &bull; 9:00&ndash;21:00</span>
 									</div>
 								</div>
-								<div class="col-auto">
+								<div class="col-auto d-none d-md-flex">
 									<div class="topLine__label"> <span>Работаем с&nbsp;2012 года</span>
 									</div>
 								</div>
