--- a/public/00-modal.html
+++ b/public/00-modal.html
@@ -19,11 +19,16 @@
 				</div>
 				<div class="menu-mobile__inner">
 					<ul class="menu" itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-						<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Наши работы</a></li>
-						<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Цены</a></li>
+						<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Каталог</a></li>
+						<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Портфолио</a></li>
+						<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Дизайн</a></li>
 						<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Калькулятор</a></li>
-						<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Акции</a></li>
-						<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Заказать</a></li>
+						<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Цены</a></li>
+						<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Отзывы</a></li>
+						<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Этапы</a></li>
+						<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Компания</a></li>
+						<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Контакты</a></li>
+						<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Блог</a></li>
 					</ul>
 				</div>
 			</div>
@@ -32,23 +37,29 @@
 			<div class="top-nav block-with-lazy">
 				<div class="container">
 					<div class="row">
-						<div class="col order-lg-0 order-last">
-							<div class="menu-mobile menu-mobile--js">
-								<div class="menu-mobile__inner">
-									<div class="toggle-menu-mobile toggle-menu-mobile--js"><span></span>
-									</div>
-									<ul class="menu" itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-										<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Наши работы</a></li>
-										<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Цены</a></li>
-										<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Калькулятор</a></li>
-										<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Акции</a></li>
-										<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Заказать</a></li>
-									</ul>
-								</div>
+						<div class="col-auto">
+							<div class="toggle-menu-mobile toggle-menu-mobile--js d-lg-none"><span></span>
+							</div>
+							<div class="top-nav__services dropdown">
+								<div class="dropdown__btn"></div>
 							</div>
 						</div>
-						<div class="col-auto d-lg-none">
-							<div class="toggle-menu-mobile toggle-menu-mobile--js"><span></span>
+						<div class="col">
+							<div class="menu-mobile menu-mobile--js">
+								<div class="menu-mobile__inner">
+									<ul class="menu" itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
+										<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Каталог</a></li>
+										<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Портфолио</a></li>
+										<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Дизайн</a></li>
+										<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Калькулятор</a></li>
+										<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Цены</a></li>
+										<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Отзывы</a></li>
+										<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Этапы</a></li>
+										<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Компания</a></li>
+										<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Контакты</a></li>
+										<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Блог</a></li>
+									</ul>
+								</div>
 							</div>
 						</div>
 					</div>
