--- a/public/00-modal.html
+++ b/public/00-modal.html
@@ -37,11 +37,41 @@
 			<div class="top-nav block-with-lazy">
 				<div class="container">
 					<div class="row">
-						<div class="col-auto">
-							<div class="toggle-menu-mobile toggle-menu-mobile--js d-lg-none"><span></span>
+						<div class="col-auto d-lg-none">
+							<div class="toggle-menu-mobile toggle-menu-mobile--js"><span></span>
 							</div>
-							<div class="top-nav__services dropdown">
-								<div class="dropdown__btn"></div>
+						</div>
+						<div class="col-auto">
+							<div class="services-dropdown dropdown">
+								<div class="services-dropdown__btn dropdown__btn">
+									<div class="services-dropdown__toggle-icon"><span></span>
+									</div><span>Услуги</span>
+								</div>
+								<div class="services-dropdown__content dropdown__content">
+									<div class="row">
+										<div class="col-4">
+											<ul>
+												<li> <a href="#">Услуги</a></li>
+												<li> <a href="#">Услуги</a></li>
+												<li> <a href="#">Услуги</a></li>
+												<li> <a href="#">Услуги</a></li>
+												<li> <a href="#">Услуги</a></li>
+											</ul>
+										</div>
+										<div class="col-8">
+											<ul>
+												<li> <a href="#">Услуги</a></li>
+												<li> <a href="#">Услуги</a></li>
+												<li> <a href="#">Услуги</a></li>
+												<li> <a href="#">Услуги</a></li>
+												<li> <a href="#">Услуги</a></li>
+												<li> <a href="#">Услуги</a></li>
+												<li> <a href="#">Услуги</a></li>
+												<li> <a href="#">Услуги</a></li>
+											</ul>
+										</div>
+									</div>
+								</div>
 							</div>
 						</div>
 						<div class="col">
