--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 							<div class="toggle-menu-mobile toggle-menu-mobile--js"><span></span>
 							</div>
 						</div>
-						<div class="col-auto">
+						<div class="col-auto d-none d-lg-block">
 							<div class="services-dropdown dropdown">
 								<div class="services-dropdown__btn dropdown__btn">
 									<div class="services-dropdown__toggle-icon"><span></span>
@@ -35,31 +35,40 @@
 								<div class="services-dropdown__content dropdown__content">
 									<div class="row">
 										<div class="col-4">
+											<h6>Навесы</h6>
 											<ul>
-												<li> <a href="#">Услуги</a></li>
-												<li> <a href="#">Услуги</a></li>
-												<li> <a href="#">Услуги</a></li>
-												<li> <a href="#">Услуги</a></li>
-												<li> <a href="#">Услуги</a></li>
+												<li> <a href="#">Для авто</a></li>
+												<li> <a href="#">Для парковки</a></li>
+												<li> <a href="#">К&nbsp;дому</a></li>
+												<li> <a href="#">Беседка</a></li>
+												<li> <a href="#">Для дачи</a></li>
+												<li> <a href="#">Кольцо и&nbsp;козырек</a></li>
+												<li> <a href="#">Для бассейна</a></li>
+												<li> <a href="#">Ангар</a></li>
 											</ul>
 										</div>
 										<div class="col-8">
+											<h6>Производим также</h6>
 											<ul>
-												<li> <a href="#">Услуги</a></li>
-												<li> <a href="#">Услуги</a></li>
-												<li> <a href="#">Услуги</a></li>
-												<li> <a href="#">Услуги</a></li>
-												<li> <a href="#">Услуги</a></li>
-												<li> <a href="#">Услуги</a></li>
-												<li> <a href="#">Услуги</a></li>
-												<li> <a href="#">Услуги</a></li>
+												<li> <a href="#">Бетонные площадки</a></li>
+												<li> <a href="#">Заезды на&nbsp;участок</a></li>
+												<li> <a href="#">Укладка тротуарной плитки</a></li>
+												<li> <a href="#">Ворота откатные и&nbsp;распашные</a></li>
+												<li> <a href="#">Заборы и&nbsp;ограждения</a></li>
+												<li> <a href="#">Кованые изделия</a></li>
+												<li> <a href="#">Крыльцо</a></li>
+												<li> <a href="#">Лестница в&nbsp;дом</a></li>
+												<li> <a href="#">Лестница на&nbsp;улице</a></li>
+												<li> <a href="#">Ангары</a></li>
+												<li> <a href="#">Изготовление металлоконструкций</a></li>
+												<li> <a href="#">Беседки</a></li>
 											</ul>
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
-						<div class="col">
+						<div class="col-auto">
 							<div class="menu-mobile menu-mobile--js">
 								<div class="menu-mobile__inner">
 									<ul class="menu" itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
@@ -75,6 +84,29 @@
 										<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Блог</a></li>
 									</ul>
 								</div>
+							</div>
+						</div>
+						<div class="col text-end">
+							<a class="top-nav__tel" href="tel:+74952563067">+7 495 256 30 67
+							</a>
+						</div>
+						<div class="col-auto">
+							<div class="soc soc--header">
+								<a class="soc__item soc__item--whatsapp" href="#" target="_blank">
+									<svg class="icon icon-whatsapp ">
+										<use xlink:href="img/svg/sprite.svg#whatsapp"></use>
+									</svg>
+								</a>
+								<a class="soc__item soc__item--phone-call" href="#" target="_blank">
+									<svg class="icon icon-phone-call ">
+										<use xlink:href="img/svg/sprite.svg#phone-call"></use>
+									</svg>
+								</a>
+								<a class="soc__item soc__item--measuring" href="#" target="_blank">
+									<svg class="icon icon-measuring ">
+										<use xlink:href="img/svg/sprite.svg#measuring"></use>
+									</svg>
+								</a>
 							</div>
 						</div>
 					</div>
