--- a/public/index.html
+++ b/public/index.html
@@ -68,8 +68,10 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-auto">
+						<div class="top-nav__col col-auto">
 							<div class="menu-mobile menu-mobile--js">
+								<div class="toggle-menu-mobile toggle-menu-mobile--js d-lg-none"><span></span>
+								</div>
 								<div class="menu-mobile__inner">
 									<ul class="menu" itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
 										<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Каталог</a></li>
@@ -102,7 +104,7 @@
 										<use xlink:href="img/svg/sprite.svg#phone-call"></use>
 									</svg>
 								</a>
-								<a class="soc__item soc__item--measuring" href="#" target="_blank">
+								<a class="soc__item soc__item--measuring d-none d-xl-grid" href="#" target="_blank">
 									<svg class="icon icon-measuring ">
 										<use xlink:href="img/svg/sprite.svg#measuring"></use>
 									</svg>
