--- a/public/00-modal.html
+++ b/public/00-modal.html
@@ -170,10 +170,61 @@
 			<footer class="footer">
 				<div class="container">
 					<div class="row">
-						<div class="col"></div>
-						<div class="col"></div>
-						<div class="col"></div>
-						<div class="col-auto"></div>
+						<div class="col-lg-3">
+							<div class="footer__head">
+								<a class="logo" href="/">
+									<svg class="icon icon-logo-top ">
+										<use xlink:href="img/svg/sprite.svg#logo-top"></use>
+									</svg>
+								</a>
+								<div class="label"> <span>Работаем с&nbsp;2012 года</span>
+								</div>
+							</div><a class="btn btn-primary btn-sm" href="#">Вызвать замерщика </a>
+						</div>
+						<div class="col-lg-2 ml-auto">
+							<h6>Компания</h6>
+							<ul>
+								<li><a href="#">Калькулятор</a></li>
+								<li><a href="#">Портфолио</a></li>
+								<li><a href="#">Отзывы</a></li>
+								<li><a href="#">Блог</a></li>
+							</ul>
+						</div>
+						<div class="col-lg-2">
+							<h6>Навесы</h6>
+							<ul>
+								<li><a href="#">Для авто</a></li>
+								<li><a href="#">Для парковки</a></li>
+								<li><a href="#">К дому</a></li>
+								<li><a href="#">Беседка</a></li>
+								<li><a href="#">Для дачи</a></li>
+								<li><a href="#">Кольцо и козырек</a></li>
+								<li><a href="#">Для бассейна</a></li>
+								<li><a href="#">Ангар</a></li>
+							</ul>
+						</div>
+						<div class="col-lg-3">
+							<h6>Производим также</h6>
+							<ul>
+								<li><a href="#">Бетонные площадки</a></li>
+								<li><a href="#">Заезды на участок</a></li>
+								<li><a href="#">Укладка тротуарной плитки</a></li>
+								<li><a href="#">Ворота откатные и распашные</a></li>
+								<li><a href="#">Заборы и ограждения</a></li>
+								<li><a href="#">Кованые изделия</a></li>
+								<li><a href="#">Крыльцо</a></li>
+								<li><a href="#">Лестница в дом</a></li>
+								<li><a href="#">Лестница на улице</a></li>
+								<li><a href="#">Ангары</a></li>
+								<li><a href="#">Изготовление металлоконструкций</a></li>
+								<li><a href="#">Беседки </a></li>
+							</ul>
+						</div>
+						<div class="col-lg-8">
+							<div class="footer__content"><span>© 2022</span><a href="#">Политика конфиденцильности</a>
+								<p>Данный сайт носит информационный характер и&nbsp;не&nbsp;является публичной офертой, которая определяется положениями статьи 437 (2) Гражданского кодекса РФ. Для получения подробной информации о&nbsp;наличии и&nbsp;стоимости указанных товаров и&nbsp;услуг, обращайтесь к&nbsp;нашим менеджерам или укажите телефон, чтобы мы&nbsp;перезвонили вам. </p>
+							</div>
+						</div>
 					</div>
 				</div>
 			</footer>
