--- a/public/00-modal.html
+++ b/public/00-modal.html
@@ -179,9 +179,11 @@
 								</a>
 								<div class="label"> <span>Работаем с&nbsp;2012 года</span>
 								</div>
-							</div><a class="btn btn-primary btn-sm" href="#">Вызвать замерщика </a>
+							</div>
+							<a class="footer__btn btn btn-primary btn-sm" href="#">Вызвать замерщика 
+							</a>
 						</div>
-						<div class="col-lg-2 ml-auto">
+						<div class="col-6 col-md-4 col-lg-2 ml-lg-auto">
 							<h6>Компания</h6>
 							<ul>
 								<li><a href="#">Калькулятор</a></li>
@@ -190,7 +192,7 @@
 								<li><a href="#">Блог</a></li>
 							</ul>
 						</div>
-						<div class="col-lg-2">
+						<div class="col-6 col-md-4 col-lg-2">
 							<h6>Навесы</h6>
 							<ul>
 								<li><a href="#">Для авто</a></li>
@@ -203,7 +205,7 @@
 								<li><a href="#">Ангар</a></li>
 							</ul>
 						</div>
-						<div class="col-lg-3">
+						<div class="footer__col col-md-4 col-lg-2">
 							<h6>Производим также</h6>
 							<ul>
 								<li><a href="#">Бетонные площадки</a></li>
