--- a/public/index.html
+++ b/public/index.html
@@ -679,9 +679,144 @@
 				<div class="container">
 					<div class="section-title text-center">
 						<h4>Калькулятор</h4>
-						<h2>Получите цену навеса и&nbsp;посмотрите, как он&nbsp;будет выглядеть</h2>
+						<h2>Получите цену навеса <br> и&nbsp;посмотрите, как он&nbsp;будет выглядеть</h2>
 					</div>
-					<div class="row"></div>
+					<div class="form-wrap">
+						<form>
+							<div class="form-wrap__part">
+								<h4>Введите параметры навеса</h4>
+								<div class="row">
+									<div class="col-4">
+										<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Длина навеса, мм"/>
+										</div>
+										<!-- +e.input-wrap-->
+									</div>
+									<div class="col-4">
+										<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ширина навеса, мм"/>
+										</div>
+										<!-- +e.input-wrap-->
+									</div>
+									<div class="col-4">
+										<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Высота навеса, мм"/>
+										</div>
+										<!-- +e.input-wrap-->
+									</div>
+									<div class="col-12">
+										<div class="form-wrap__input-wrap form-group">
+											<select class="form-wrap__input form-select" name="select">
+												<option value="Материал кровли">Материал кровли</option>
+												<option value=" placeholder 1">placeholder 1</option>
+												<option value=" placeholder 2">placeholder 2</option>
+												<option value=" placeholder 3">placeholder 3</option>
+												<option value=" placeholder 4">placeholder 4</option>
+											</select>
+										</div>
+										<!-- +e.input-wrap-->
+									</div>
+								</div>
+								<div class="form-wrap__slider-wrapper">
+									<div class="small">Форма крыши</div>
+									<div class="form-wrap__slider form-wrap__slider--js swiper">
+										<div class="swiper-wrapper">
+											<div class="form-wrap__slide swiper-slide">
+												<div class="form-wrap__item">
+													<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="radio" type="radio"/><span class="custom-input__text form-check-label">текст</span>
+													</label>
+												</div>
+											</div>
+											<div class="form-wrap__slide swiper-slide">
+												<div class="form-wrap__item">
+													<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="radio" type="radio"/><span class="custom-input__text form-check-label">текст</span>
+													</label>
+												</div>
+											</div>
+											<div class="form-wrap__slide swiper-slide">
+												<div class="form-wrap__item">
+													<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="radio" type="radio"/><span class="custom-input__text form-check-label">текст</span>
+													</label>
+												</div>
+											</div>
+											<div class="form-wrap__slide swiper-slide">
+												<div class="form-wrap__item">
+													<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="radio" type="radio"/><span class="custom-input__text form-check-label">текст</span>
+													</label>
+												</div>
+											</div>
+											<div class="form-wrap__slide swiper-slide">
+												<div class="form-wrap__item">
+													<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="radio" type="radio"/><span class="custom-input__text form-check-label">текст</span>
+													</label>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="form-wrap__part">
+								<h6>Визуализация навеса</h6>
+								<div class="form-wrap__img-wrap">
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/sCalculator-1.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/sCalculator-1.webp"/><img class="object-fit-js" src="img/@2x/sCalculator-1.png" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture-->
+								</div>
+							</div>
+							<div class="form-wrap__part">
+								<h6>Предварительные расчеты</h6>
+								<table>
+									<tr>
+										<td>Металлические столбы</td>
+										<td>8&nbsp;шт</td>
+									</tr>
+									<tr>
+										<td>Силовые боковые балки</td>
+										<td>2&nbsp;шт</td>
+									</tr>
+									<tr>
+										<td>Металлические фермы</td>
+										<td>5&nbsp;шт</td>
+									</tr>
+									<tr>
+										<td>Обрешетка (лаги)</td>
+										<td>12&nbsp;шт</td>
+									</tr>
+									<tr>
+										<td>Сотовый поликарбонат</td>
+										<td>36&nbsp;м2</td>
+									</tr>
+									<tr>
+										<td>Соединительные профили</td>
+										<td>1&nbsp;к-т</td>
+									</tr>
+									<tr>
+										<td>Окрашивание</td>
+										<td>30&nbsp;м2</td>
+									</tr>
+								</table>
+							</div>
+							<div class="form-wrap__part">
+								<h6>Получите расчет цены и&nbsp;полную смету</h6>
+								<div class="row">
+									<div class="col-6">
+										<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="place"/>
+										</div>
+										<!-- +e.input-wrap-->
+									</div>
+									<div class="col-6">
+										<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="place"/>
+										</div>
+										<!-- +e.input-wrap-->
+									</div>
+									<div class="col-12">
+										<button class="form-wrap__btn" type="submit">Получить точный расчет за&nbsp;15&nbsp;минут
+										</button>
+									</div>
+								</div>
+							</div>
+						</form>
+					</div>
 				</div>
 			</section>
 			<!-- end sCalculator-->
