--- a/public/index.html
+++ b/public/index.html
@@ -718,36 +718,36 @@
 									<div class="small">Форма крыши</div>
 									<div class="form-wrap__slider form-wrap__slider--js swiper">
 										<div class="swiper-wrapper">
-											<div class="form-wrap__slide swiper-slide">
-												<div class="form-wrap__item">
-													<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="radio" type="radio"/><span class="custom-input__text form-check-label">текст</span>
-													</label>
+												<div class="form-wrap__slide swiper-slide">
+													<div class="form-wrap__item">
+														<input class="btn-check" type="radio" name="options" id="option1" autocomplete="off"/>
+														<label for="option1"><img src="img/svg/sCalculator-1.svg" alt=""/><span>1-скатная кровля</span></label>
+													</div>
 												</div>
-											</div>
-											<div class="form-wrap__slide swiper-slide">
-												<div class="form-wrap__item">
-													<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="radio" type="radio"/><span class="custom-input__text form-check-label">текст</span>
-													</label>
+												<div class="form-wrap__slide swiper-slide">
+													<div class="form-wrap__item">
+														<input class="btn-check" type="radio" name="options" id="option2" autocomplete="off"/>
+														<label for="option2"><img src="img/svg/sCalculator-2.svg" alt=""/><span>2-скатная кровля</span></label>
+													</div>
 												</div>
-											</div>
-											<div class="form-wrap__slide swiper-slide">
-												<div class="form-wrap__item">
-													<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="radio" type="radio"/><span class="custom-input__text form-check-label">текст</span>
-													</label>
+												<div class="form-wrap__slide swiper-slide">
+													<div class="form-wrap__item">
+														<input class="btn-check" type="radio" name="options" id="option3" autocomplete="off"/>
+														<label for="option3"><img src="img/svg/sCalculator-3.svg" alt=""/><span>Арочная кровля</span></label>
+													</div>
 												</div>
-											</div>
-											<div class="form-wrap__slide swiper-slide">
-												<div class="form-wrap__item">
-													<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="radio" type="radio"/><span class="custom-input__text form-check-label">текст</span>
-													</label>
+												<div class="form-wrap__slide swiper-slide">
+													<div class="form-wrap__item">
+														<input class="btn-check" type="radio" name="options" id="option4" autocomplete="off"/>
+														<label for="option4"><img src="img/svg/sCalculator-4.svg" alt=""/><span>Полуарочная кровля</span></label>
+													</div>
 												</div>
-											</div>
-											<div class="form-wrap__slide swiper-slide">
-												<div class="form-wrap__item">
-													<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="radio" type="radio"/><span class="custom-input__text form-check-label">текст</span>
-													</label>
+												<div class="form-wrap__slide swiper-slide">
+													<div class="form-wrap__item">
+														<input class="btn-check" type="radio" name="options" id="option5" autocomplete="off"/>
+														<label for="option5"><img src="img/svg/sCalculator-5.svg" alt=""/><span>4-скатная кровля</span></label>
+													</div>
 												</div>
-											</div>
 										</div>
 									</div>
 								</div>
